# spark-rapids-tools

./: .code-critic.yaml  .gitignore  .pre-commit-config.yaml  .pylintrc  CHANGELOG.md  CONTRIBUTING.md  NOTICE  NOTICE-binary  README.md  pylintrc
data_validation/: pyproject.toml  setup.cfg  tox.ini
data_validation/docs/: validation-tools.md
data_validation/src/spark_rapids_validation_tool/: __init__.py  build.py  data_validation.py  data_validation_dataproc.py  dataproc_wrapper.py  utilities.py
data_validation/src/spark_rapids_validation_tool/csp/: __init__.py  csp.py  dataproc.py
data_validation/src/spark_rapids_validation_tool/validation_scripts/: dataset_validation.py  metadata_validation.py
data_validation/templates/: datavalid_conf.yml
user_tools/: LICENSE  README.md  build.sh  pyproject.toml  setup.cfg  tox.ini
user_tools/custom_speedup_factors/: README.md  defaultScores.csv  generate_speedup_factors.py  operatorsList.csv  validate_qualification_estimates.py
user_tools/docs/: index.md  legacy-user-tools-dataproc.md  qualx.md  tools_e2e_tests.md  user-tools-aws-emr.md  user-tools-databricks-aws.md  user-tools-databricks-azure.md  user-tools-dataproc-gke.md  user-tools-dataproc.md  user-tools-onprem.md  user-tools-reports-api.md
user_tools/docs/resources/: rapids_user_tools_overview-01.drawio  spark_rapids_user_tools_overview-01.drawio
user_tools/src/as_pytools/: __init__.py  enums.py  exceptions.py
user_tools/src/as_pytools/cloud/: __init__.py  cluster.py
user_tools/src/as_pytools/cmdli/: __init__.py  argprocessor.py  ascli.py
user_tools/src/as_pytools/storagelib/: __init__.py  aspath.py  csppath.py  fs.py
user_tools/src/as_pytools/tools/: autotuner.py
user_tools/src/as_pytools/utils/: __init__.py  propmanager.py  util.py
user_tools/src/pyrapids/: __init__.py  build.py  wrapper.py
user_tools/src/pyrapids/cloud_api/: emr.py  emr_job.py  gstorage.py  s3storage.py  sp_types.py
user_tools/src/pyrapids/cmdli/: __init__.py  argprocessor.py  pyrapids_cli.py
user_tools/src/pyrapids/common/: sys_storage.py  utilities.py
user_tools/src/pyrapids/pricing/: emr_pricing.py  price_provider.py
user_tools/src/pyrapids/rapids/: bootstrap.py  profiling.py  qualification.py  rapids_job.py  rapids_tool.py  tool_ctxt.py
user_tools/src/pyrapids/resources/: emr-configs.json  qualification-conf.yaml
user_tools/src/pyrapids/storagelib/: cspfs.py  csppath.py
user_tools/src/pyrapids/tools/: autotuner.py
user_tools/src/pyrapids/utils/: propmanager.py  util.py
user_tools/src/spark_rapids_dataproc_tools/: __init__.py  bootstrap.py  build.py  cost_estimator.py  data_validation.py  data_validation_dataproc.py  dataproc_utils.py  dataproc_wrapper.py  diag.py  diag_dataproc.py  rapids_models.py  utilities.py
user_tools/src/spark_rapids_dataproc_tools/csp/: __init__.py  csp.py  dataproc.py
user_tools/src/spark_rapids_dataproc_tools/diag_scripts/: hello_world.py  perf.py
user_tools/src/spark_rapids_dataproc_tools/resources/: bootstrap-conf.yaml  gcloud-catalog.json  profiling-conf.yaml  qualification-conf.yaml
user_tools/src/spark_rapids_dataproc_tools/validation_scripts/: compare.py  data_validation.py  metadata_validation.py
user_tools/src/spark_rapids_pytools/: __init__.py  build.py  wrapper.py
user_tools/src/spark_rapids_pytools/ascli_cli/: __init__.py  ascli.py
user_tools/src/spark_rapids_pytools/cloud_api/: __init__.py  azurestorage.py  databricks-aws.py  databricks_aws.py  databricks_aws_job.py  databricks_azure.py  databricks_azure_job.py  dataproc.py  dataproc_gke.py  dataproc_gke_job.py  dataproc_job.py  emr.py  emr_job.py  gstorage.py  onprem.py  s3storage.py  sp_types.py
user_tools/src/spark_rapids_pytools/common/: __init__.py  cluster_inference.py  exceptions.py  prop_manager.py  sys_storage.py  utilities.py
user_tools/src/spark_rapids_pytools/pricing/: __init__.py  databricks_aws_pricing.py  databricks_azure_pricing.py  databricks_pricing.py  dataproc_gke_pricing.py  dataproc_pricing.py  emr_pricing.py  price_provider.py
user_tools/src/spark_rapids_pytools/rapids/: __init__.py  bootstrap.py  diagnostic.py  prediction.py  profiling.py  profiling_core.py  qualification.py  qualification_core.py  qualification_stats.py  rapids_job.py  rapids_tool.py  tool_ctxt.py
user_tools/src/spark_rapids_pytools/resources/: azure-instances-catalog.json  bootstrap-conf.yaml  cluster-configs.yaml  collect.sh  databricks-aws-configs.json  databricks-premium-catalog.json  databricks_aws-configs.json  databricks_azure-configs.json  databricks_azure-instance-catalog.json  dataproc-configs.json  dataproc-instance-catalog.json  dataproc_gke-configs.json  diagnostic-conf.yaml  distributed-tools-conf.yaml  emr-configs.json  emr-instance-catalog.json  offline_downloader.py  onprem-configs.json  onprem-info.yaml  premium-databricks-azure-catalog.json  process-databricks-azure-pricing.py  process_databricks_azure_pricing.py  profiling-conf.yaml  qualification-conf.yaml  (+3 more)
user_tools/src/spark_rapids_tools/: __init__.py  enums.py  exceptions.py
user_tools/src/spark_rapids_tools_distributed/: distributed_main.py  jar_cmd_args.py
user_tools/tests/: __init__.py  conftest.py  mock_cluster.py  test_basic.py  test_bootstrap.py  test_diag.py  test_diagnostic.py  test_profiling.py  test_qualification.py  test_tool_argprocessor.py
user_tools/tests/as_pyunit/: conftest.py  test_cluster.py  test_tool_argprocessor.py
user_tools/tests/pyrapids_unit/: conftest.py  test_cluster.py  test_tool_argprocessor.py
user_tools/tests/resources/: dataproc-test-gpu-cluster.yaml  dataproc-test-nongpu-cluster.yaml  dataproc-test-spark2-cluster.yaml
user_tools/tests/spark_rapids_tools_distributed/: __init__.py  test_sanitize_for_posix.py
user_tools/tests/spark_rapids_tools_e2e/: behave.ini
user_tools/tests/spark_rapids_tools_ut/: __init__.py  conftest.py  test_cluster.py  test_csppath.py  test_data_utils.py  test_deprecated_prop_container.py  test_maven_url.py  test_path_boundary.py  test_tool_argprocessor.py
user_tools/tests/utils/: test_data_utils.py  test_net_utils.py
(+970 files in other folders)
