[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "spark-rapids-validation-tool"
authors = [
  { name="Raza Jafri", email="raza.jafri@gmail.com" },
  { name="Ahmed Hussein", email="a@ahussein.me" },
]
description = "A simple wrapper process around cloud service providers to run tools for the RAPIDS Accelerator for Apache Spark."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dependencies = [
    "fire==0.4.0",
    "pandas==1.4.3",
    "pyYAML==6.0",
    "tabulate==0.8.10",
    "importlib-resources==5.10.2",
    "requests==2.31.0",
    "packaging==23.0",
    "certifi==2023.7.22",
    "idna==3.7",
    "urllib3==1.26.18",
    "beautifulsoup4==4.11.2"
]
dynamic=["entry-points", "version"]
[tool.setuptools.dynamic]
version = {attr = "spark_rapids_validation_tool.__version__"}
