# Copyright (c) 2024, NVIDIA CORPORATION.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "spark-rapids-validation-tool"
authors = [
  { name="Raza Jafri", email="raza.jafri@gmail.com" },
  { name="Ahmed Hussein", email="a@ahussein.me" },
]
description = "A simple wrapper process around cloud service providers to run tools for the RAPIDS Accelerator for Apache Spark."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dependencies = [
    "fire==0.4.0",
    "pandas==1.4.3",
    "pyYAML==6.0",
    "tabulate==0.8.10",
    "importlib-resources==5.10.2",
    "requests==2.32.2",
    "packaging==23.0",
    "certifi==2024.7.4",
    "idna==3.7",
    "urllib3==1.26.19",
    "beautifulsoup4==4.11.2"
]
dynamic=["entry-points", "version"]
[tool.setuptools.dynamic]
version = {attr = "spark_rapids_validation_tool.__version__"}
