[options.entry_points]
console_scripts =
    spark_rapids_user_tools = spark_rapids_pytools.wrapper:main
    ascli = spark_rapids_pytools.ascli_cli.ascli:main
[options.package_data]
* = *.json, *.yaml, *.ms, *.sh
; Comment below lines to build wheel for offline mode
[options.exclude_package_data]
spark_rapids_pytools.resources.offline = *
